--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="item" src="/img/downarrow.png">
       </div>
       <video class="video-bg" autoplay muted loop>
-        <source src="" type="video/mp4" />
+        <source src="/video/mymovie.mp4" type="video/mp4" />
       </video>
     </div>
 
