removed an image, and made changes to the footer in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
     <div class="hero">
       <h1>kristen anderson</h1>
-      
-      <div class="item" src="/img/downarrow.png">
-      </div>
+      <i class="fa-solid fa-angles-down"></i>
       <video class="video-bg" autoplay muted loop>
         <source src="/video/mymovie.mp4" type="video/mp4" />
       </video>
@@ -60,13 +58,21 @@
     </div>
 
     <footer>
-      <div class="footer-container">
-        <h4>kranderson</h4>
-        <h3 class="text">Follow Me</h3>
-        <a href="" class="fa fa-facebook"></a>
-        <a href="" class="fa fa-twitter"></a>
-        <a href="" class="fa fa-instagram"></a>
-        <a href="" class="fa fa-linkedin"></a>
+      <div class="f-grid-container">
+        <div class="f-grid-item">
+          <i class="fa-solid fa-angles-right"></i>
+        </div>
+        <div class="f-grid-item-2">
+          <h4>kranderson</h4>
+          <h3 class="text">Follow Me</h3>
+          <a href="" class="fa fa-facebook"></a>
+          <a href="" class="fa fa-twitter"></a>
+          <a href="" class="fa fa-instagram"></a>
+          <a href="" class="fa fa-linkedin"></a>
+        </div>
+        <div class="f-grid-item">
+          <i class="fa-solid fa-angles-left"></i>
+        </div>
       </div>
     </footer>
     <div class="copyright">Copyright &copy; 2022</div>
