added google fonts to about and contact html files, and added more styling to each page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Google Font Links-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <!--font awesome link-->
     <script
       src="https://kit.fontawesome.com/d47dcf070e.js"
@@ -62,8 +76,21 @@
     </section>
 
     <footer>
-      <div class="footer-container">
-        <h4>kranderson</h4>
+      <div class="f-grid-container">
+        <div class="f-grid-item">
+          <i class="fa-solid fa-angles-right"></i>
+        </div>
+        <div class="f-grid-item-2">
+          <h3>kranderson</h3>
+          <h5 class="text">Follow Me</h5>
+          <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+          <a href="https://twitter.com" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+          <a href="https://www.linkedin.com/home" class="fa fa-linkedin"></a>
+        </div>
+        <div class="f-grid-item">
+          <i class="fa-solid fa-angles-left"></i>
+        </div>
       </div>
     </footer>
   </body>
