--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
 
     <div class="grid-container">
       <div class="grid-item">
-        <a href=""><img src="/img/logo1.png" alt="logo" /></a>
-        <a href=""
+        <a href="https://girlkaaaay.github.io/MFAboutMe/"
+          ><img src="/img/logo1.png" alt="logo"
+        /></a>
+        <a href="https://girlkaaaay.github.io/final-project/"
           ><img src="/img/logo2.png" alt="logo with fork and spoon"
         /></a>
-        <a href=""><img src="/img/logo3.png" alt="logo" /></a>
+        <a href="https://girlkaaaay.github.io/w4b-final/"
+          ><img src="/img/logo3.png" alt="logo"
+        /></a>
       </div>
     </div>
 
@@ -63,12 +67,12 @@
           <i class="fa-solid fa-angles-right"></i>
         </div>
         <div class="f-grid-item-2">
-          <h4>kranderson</h4>
-          <h3 class="text">Follow Me</h3>
-          <a href="" class="fa fa-facebook"></a>
-          <a href="" class="fa fa-twitter"></a>
-          <a href="" class="fa fa-instagram"></a>
-          <a href="" class="fa fa-linkedin"></a>
+          <h3>kranderson</h3>
+          <h5 class="text">Follow Me</h5>
+          <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+          <a href="https://twitter.com" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+          <a href="https://www.linkedin.com/home" class="fa fa-linkedin"></a>
         </div>
         <div class="f-grid-item">
           <i class="fa-solid fa-angles-left"></i>
