added @media queries for multiple sizes

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <div class="accordian">
           <div class="accordian-item" id="question1">
             <a class="accordian-link" href="#question1">
-              How often do you go to the beach?
+              Lorem ipsum dolor sit amet.?
               <i class="fa-solid fa-angles-down"></i>
             </a>
             <div class="answer">
@@ -70,7 +70,7 @@
           </div>
           <div class="accordian-item" id="question2">
             <a class="accordian-link" href="#question2">
-              How often do you go to the beach?
+              Lorem ipsum dolor sit amet.?
               <i class="fa-solid fa-angles-down"></i>
             </a>
             <div class="answer">
@@ -82,7 +82,7 @@
           </div>
           <div class="accordian-item" id="question3">
             <a class="accordian-link" href="#question3">
-              How often do you go to the beach?
+              Lorem ipsum dolor sit amet.?
               <i class="fa-solid fa-angles-down"></i>
             </a>
             <div class="answer">
