--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
               placeholder="Write Message"
               required
             ></textarea>
-            <input type="submit" value="Send" class="send-button" />
+            <input type="submit" value="Send" class="send-button" id="contact-page-send-button" />
           </form>
         </div>
         <!-- Google Map-->
