--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
   <body>
     <header>
       <h2><a href="/index.html">kranderson</a></h2>
-      <div class="navbar">
-        <a class="menu" href="/index.html">Home</a>
-        <a class="menu" href="/about.html">About</a>
-        <a class="menu" href="/contact.html">Contact</a>
-      </div>
+      <nav class="navbar">
+        <li><a class="menu" href="/index.html">Home</a></li>
+        <li><a class="menu" href="/about.html">About</a></li>
+        <li><a class="menu" href="/contact.html">Contact</a></li>
+      </nav>
     </header>
 
     <div class="hero">
       <h1>kristen anderson</h1>
-      <i class="fa-solid fa-angles-down"></i>
+      <i class="fa-solid fa-angles-down" id="hero-page-arrow-down"></i>
       <video class="video-bg" autoplay muted loop>
         <source src="/video/mymovie.mp4" type="video/mp4" />
       </video>
