changed image directories

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     <div class="about-page-container">
       <img
         class="kristen-image"
-        src="/img/kristen.png"
+        src="./img/kristen.png"
         alt="photo of kristen"
       />
       <div class="about-me-paragraph">
