--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
       <h1>kristen anderson</h1>
       <i class="fa-solid fa-angles-down" id="hero-page-arrow-down"></i>
       <video class="video-bg" autoplay muted loop>
-        <source src="/video/mymovie.mp4" type="video/mp4" />
+        <source src="./video/mymovie.mp4" type="video/mp4" />
       </video>
     </div>
 
     <div class="grid-container">
       <div class="grid-item">
         <a href="https://girlkaaaay.github.io/MFAboutMe/"
-          ><img src="/img/logo1.png" alt="logo"
+          ><img src="./img/logo1.png" alt="logo"
         /></a>
         <a href="https://girlkaaaay.github.io/final-project/"
-          ><img src="/img/logo2.png" alt="logo with fork and spoon"
+          ><img src="./img/logo2.png" alt="logo with fork and spoon"
         /></a>
         <a href="https://girlkaaaay.github.io/w4b-final/"
-          ><img src="/img/logo3.png" alt="logo"
+          ><img src="./img/logo3.png" alt="logo"
         /></a>
       </div>
     </div>
