navlinks directory path changed

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <header>
       <h2><a href="/index.html">kranderson</a></h2>
       <nav class="navbar">
-        <li><a class="menu" href="/index.html">Home</a></li>
-        <li><a class="menu" href="/about.html">About</a></li>
-        <li><a class="menu" href="/contact.html">Contact</a></li>
+        <li><a class="menu" href="./index.html">Home</a></li>
+        <li><a class="menu" href="./about.html">About</a></li>
+        <li><a class="menu" href="./contact.html">Contact</a></li>
       </nav>
     </header>
 
