file directory change, and deleted borders in style.css file

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
     <header>
       <h2><a href="/index.html">kranderson</a></h2>
       <div class="navbar">
-        <a class="menu" href="/index.html">Home</a>
-        <a class="menu" href="/about.html">About</a>
-        <a class="menu" href="/contact.html">Contact</a>
+        <a class="menu" href="./index.html">Home</a>
+        <a class="menu" href="./about.html">About</a>
+        <a class="menu" href="./contact.html">Contact</a>
       </div>
     </header>
 
@@ -81,7 +81,7 @@
           <i class="fa-solid fa-angles-right"></i>
         </div>
         <div class="f-grid-item-2">
-          <h3><a href="/index.html">kranderson</a></h3>
+          <h3><a href="./index.html">kranderson</a></h3>
           <h5 class="text">Follow Me</h5>
           <a href="https://www.facebook.com" class="fa fa-facebook"></a>
           <a href="https://twitter.com" class="fa fa-twitter"></a>
