--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <i class="fa-solid fa-angles-right"></i>
         </div>
         <div class="f-grid-item-2">
-          <h3><a href="/index.html">kranderson</a></h3>
+          <h3><a href="./index.html">kranderson</a></h3>
           <h5 class="text">Follow Me</h5>
           <a href="https://www.facebook.com" class="fa fa-facebook"></a>
           <a href="https://twitter.com" class="fa fa-twitter"></a>
