added padding and margin to the contact form, and erased borders

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header>
-      <h2><a href="/index.html">kranderson</a></h2>
+      <h2><a href="./index.html">kranderson</a></h2>
       <div class="navbar">
         <a class="menu" href="./index.html">Home</a>
         <a class="menu" href="./about.html">About</a>
@@ -38,7 +38,6 @@
       </div>
     </header>
 
-    <section class="contact">
       <div class="contact-container">
         <div class="form-container">
           <h3>Let's get in touch!</h3>
@@ -73,7 +72,6 @@
           ></iframe>
         </div>
       </div>
-    </section>
 
     <footer>
       <div class="f-grid-container">
