--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <h2><a href="/index.html">kranderson</a></h2>
+      <h2><a href="./index.html">kranderson</a></h2>
       <nav class="navbar">
         <li><a class="menu" href="./index.html">Home</a></li>
         <li><a class="menu" href="./about.html">About</a></li>
