--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <h2><a href="/index.html">kranderson</a></h2>
+      <h2><a href="./index.html">kranderson</a></h2>
       <div class="navbar">
         <a class="menu" href="./index.html">Home</a>
         <a class="menu" href="./about.html">About</a>
