--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       />
       <div class="about-me-paragraph">
         Hello! Kristen Anderson here. I am 28 yeard old, and I'm currently a
-        WordPress Apprentice at Bitwise Industries.
+      WordPress Apprentice at Bitwise Industries. Feel free to email me if you want to get in touch and collaborate!
       </div>
     </div>
 
