added a target to all links so they open in a tab

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
     <div class="grid-container">
       <div class="grid-item">
-        <a href="https://girlkaaaay.github.io/MFAboutMe/"
+        <a href="https://girlkaaaay.github.io/MFAboutMe/" target="_blank"
           ><img src="./img/logo1.png" alt="logo"
         /></a>
-        <a href="https://girlkaaaay.github.io/final-project/"
+        <a href="https://girlkaaaay.github.io/final-project/" target="_blank"
           ><img src="./img/logo2.png" alt="logo with fork and spoon"
         /></a>
-        <a href="https://girlkaaaay.github.io/w4b-final/"
+        <a href="https://girlkaaaay.github.io/w4b-final/" target="_blank"
           ><img src="./img/logo3.png" alt="logo"
         /></a>
       </div>
@@ -69,10 +69,10 @@
         <div class="f-grid-item-2">
           <h3><a href="./index.html">kranderson</a></h3>
           <h5 class="text">Follow Me</h5>
-          <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-          <a href="https://twitter.com" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-          <a href="https://www.linkedin.com/home" class="fa fa-linkedin"></a>
+          <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://twitter.com" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
+          <a href="https://www.linkedin.com/home" target="_blank" class="fa fa-linkedin"></a>
         </div>
         <div class="f-grid-item">
           <i class="fa-solid fa-angles-left"></i>
