--- a/about.html
+++ b/about.html
@@ -104,10 +104,10 @@
         <div class="f-grid-item-2">
           <h3><a href="./index.html">kranderson</a></h3>
           <h5 class="text">Follow Me</h5>
-          <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-          <a href="https://twitter.com" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com" class="fa fa-instagram"></a>
-          <a href="https://www.linkedin.com/home" class="fa fa-linkedin"></a>
+          <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://twitter.com" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
+          <a href="https://www.linkedin.com/home" target="_blank" class="fa fa-linkedin"></a>
         </div>
         <div class="f-grid-item">
           <i class="fa-solid fa-angles-left"></i>
