added last minute touches to all files

--- a/contact.html
+++ b/contact.html
@@ -38,40 +38,39 @@
       </div>
     </header>
 
-      <div class="contact-container">
-        <div class="form-container">
-          <h3>Let's get in touch!</h3>
-          <form action="" class="contact-form">
-            <input type="text" placeholder="Your Name" required />
-            <input
-              type="email"
-              name=""
-              id=""
-              placeholder="Your Email"
-              required
-            />
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="10"
-              placeholder="Write Message"
-              required
-            ></textarea>
-            <input type="submit" value="Send" class="send-button" id="contact-page-send-button" />
-          </form>
-        </div>
-        <!-- Google Map-->
-        <div class="map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.60406109404!2d-119.78796568442066!3d36.73206927923099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1652132443331!5m2!1sen!2sus"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
+    <div class="contact-container">
+      <div class="form-container">
+        <h3>Let's get in touch!</h3>
+        <form action="" class="contact-form">
+          <input type="text" placeholder="Your Name" required />
+          <input type="email" name="" id="" placeholder="Your Email" required />
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Write Message"
+            required
+          ></textarea>
+          <input
+            type="submit"
+            value="Send"
+            class="send-button"
+            id="contact-page-send-button"
+          />
+        </form>
       </div>
+      <!-- Google Map-->
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.60406109404!2d-119.78796568442066!3d36.73206927923099!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise%20Industries!5e0!3m2!1sen!2sus!4v1652132443331!5m2!1sen!2sus"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </div>
 
     <footer>
       <div class="f-grid-container">
@@ -81,10 +80,26 @@
         <div class="f-grid-item-2">
           <h3><a href="./index.html">kranderson</a></h3>
           <h5 class="text">Follow Me</h5>
-          <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
-          <a href="https://twitter.com" target="_blank" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
-          <a href="https://www.linkedin.com/home" target="_blank" class="fa fa-linkedin"></a>
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            class="fa fa-facebook"
+          ></a>
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            class="fa fa-twitter"
+          ></a>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            class="fa fa-instagram"
+          ></a>
+          <a
+            href="https://www.linkedin.com/home"
+            target="_blank"
+            class="fa fa-linkedin"
+          ></a>
         </div>
         <div class="f-grid-item">
           <i class="fa-solid fa-angles-left"></i>
