--- a/about.html
+++ b/about.html
@@ -49,7 +49,8 @@
       />
       <div class="about-me-paragraph">
         Hello! Kristen Anderson here. I am 28 yeard old, and I'm currently a
-      WordPress Apprentice at Bitwise Industries. Feel free to email me if you want to get in touch and collaborate!
+        WordPress Apprentice at Bitwise Industries. Feel free to email me if you
+        want to get in touch and collaborate!
       </div>
     </div>
 
@@ -104,10 +105,26 @@
         <div class="f-grid-item-2">
           <h3><a href="./index.html">kranderson</a></h3>
           <h5 class="text">Follow Me</h5>
-          <a href="https://www.facebook.com" target="_blank" class="fa fa-facebook"></a>
-          <a href="https://twitter.com" target="_blank" class="fa fa-twitter"></a>
-          <a href="https://www.instagram.com" target="_blank" class="fa fa-instagram"></a>
-          <a href="https://www.linkedin.com/home" target="_blank" class="fa fa-linkedin"></a>
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            class="fa fa-facebook"
+          ></a>
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            class="fa fa-twitter"
+          ></a>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            class="fa fa-instagram"
+          ></a>
+          <a
+            href="https://www.linkedin.com/home"
+            target="_blank"
+            class="fa fa-linkedin"
+          ></a>
         </div>
         <div class="f-grid-item">
           <i class="fa-solid fa-angles-left"></i>
