--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Assessmnet Project</title>
+    <title>Assessment Project</title>
   </head>
   <body>
     <header>
