added @media queries to style.css

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Assessmnet Project</title>
+    <title>Assessment Project</title>
   </head>
   <body>
     <header>
